# pybatgen

./: .travis.yml  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements_dev.txt  scriptizer.py  tox.ini
.github/: FUNDING.yml  ISSUE_TEMPLATE.md
.github/workflows/: pybuild.yaml  pypi-publish.yaml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/pybatgen/: __init__.py  banner.txt  cli.py  pybatgen.py
src/tests/: __init__.py  test_pybatgen.py
tests/: test_pybatgen.py
