[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pybatgen"
version = "0.1.0"
description = "Generate .bat files for python scripts/modules"
readme = "README.rst"
authors = [
  {name = "Reed Jones", email = "reedmjones@outlook.com"}
]
maintainers = [
  {name = "Reed Jones", email = "reedmjones@outlook.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer",
  "rich",
  "rich-pixels"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/reedjones/pybatgen/issues"
changelog = "https://github.com/reedjones/pybatgen/blob/master/changelog.md"
homepage = "https://github.com/reedjones/pybatgen"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

